recent comments on community page (may be buggy)

--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="/finalium/css/finalium.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if google_tag %}
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_tag }}"></script>
