readd branding on bettysb

--- a/betty/skins/finalium/templates/_layout.twig
+++ b/betty/skins/finalium/templates/_layout.twig
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
-    <title>{{ title }} - bettySB</title>
+    <title>{{ title }} - {{ website_branding.name }}</title>
+
+    {% block head %}{% endblock %}
+    
+    <link rel="manifest" href="{{ website_branding.assets_location }}/icons/site.webmanifest">
+    <link rel="shortcut icon" href="{{ website_branding.assets_location }}/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ website_branding.assets_location }}/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ website_branding.assets_location }}/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ website_branding.assets_location }}/icons/favicon-16x16.png">
+    <meta name="apple-mobile-web-app-title" content="{{ website_branding.name }}">
+    <meta name="application-name" content="{{ website_branding.name }}">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
