--- a/betty/skins/finalium/templates/components/header.twig
+++ b/betty/skins/finalium/templates/components/header.twig
@@ -8,7 +8,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.php">BettySB</a>
+            <a class="navbar-brand" href="/index.php">
+                <img class="navbar-logo" src="{{ website_branding.assets_location }}/logo-wordmark.png"/>
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
