--- a/betty/skins/finalium/templates/watch.twig
+++ b/betty/skins/finalium/templates/watch.twig
@@ -75,7 +75,7 @@
                     </button>
                     <p>Submitted {{ submission.published | relative_time }} on {{ submission.published | date('F j, Y') }}</p>
                     {% if submission.description | trim is not empty %}
-                        {{ submission.description | markdown }}
+                        {{ submission.description | markdown_user_written }}
                     {% else %}
                         <em class="text-muted">This submission has no description.</em>
                     {% endif %}
@@ -94,7 +94,7 @@
                             <div class="media-body">
                                 <h4 class="media-heading">{{ user_link(comment.author) }} <small>{{ comment.posted | relative_time }}</small></h4>
                                 {% if comment.post | trim is not empty %}
-                                    <p>{{ comment.post | markdown }}</p>
+                                    <p>{{ comment.post | markdown_user_written }}</p>
                                 {% else %}
                                     <em class="text-muted">This comment is empty, due to a now-patched exploit.</em>
                                 {% endif %}
