--- a/betty/skins/qobo/templates/_layout.twig
+++ b/betty/skins/qobo/templates/_layout.twig
@@ -39,6 +39,12 @@
         <input type="hidden" name="action" value="logout">
     </form>
     <div class="page-contents">
+        {% if session.notif_message %}
+            <div class="alert alert-{{ session.notif_color }}">
+                {{ session.notif_message }}
+            </div>
+            {{ remove_notification() }}
+        {% endif %}
         {% block content %}{% endblock %}
         <div class="footer">
             <p>© 2021-{{ 'now' | date('Y') }} BettySB contributors.</p>
