--- a/betty/skins/qobo/templates/index.twig
+++ b/betty/skins/qobo/templates/index.twig
@@ -44,7 +44,7 @@
                                     </a>
                                 </div>
                                 <div class="content-description">
-                                    By {{ user_link(submission.author) }}
+                                    By {{ user_link(submission.author) }}, {{ submission.published | relative_time }}
                                     <br>
                                     {% if submission.description|trim is not empty %}
                                         <span>{{ submission.description }}</span>
@@ -66,7 +66,7 @@
     <div id="page-right" style="width: 260px;">
         <div class="content-header">What's new?</div>
         <div class="content-box">
-            Just another redesign of Qobo. This time, we've also started over with the codebase, again.
+            Just another redesign of Qobo.
         </div>
     </div>
 {% endblock %}
