--- a/betty/skins/qobo/templates/_layout.twig
+++ b/betty/skins/qobo/templates/_layout.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>{{ title }} - Qobo Beta</title>
+    <title>{{ title }} - Qobo</title>
     <link rel="stylesheet" href="theme/common.css">
     <link rel="stylesheet" href="theme/famfamfam-silk.min.css">
     <link rel="stylesheet" href="theme/silk-companion.min.css">
@@ -22,6 +22,8 @@
                 {% endif %}
                 <a class="menulink" href="logout.php">Log out</a>
             {% else %}
+                <a class="menulink" href="/login.php">Login</a> -
+                <a class="menulink" href="/register.php">Register</a>
             {% endif %}
         </div>
     </div>
@@ -40,7 +42,8 @@
     </form>
     <div class="page-contents">
         {% if session.notif_message %}
-            <div class="alert alert-{{ session.notif_color }}">
+            <div class="banner banner-{{ session.notif_color }}">
+                <span class="{{ notification_icon(session.notif_color) }}" style="display: inline-block;"></span>
                 {{ session.notif_message }}
             </div>
             {{ remove_notification() }}
