--- a/betty/skins/qobo/templates/index.twig
+++ b/betty/skins/qobo/templates/index.twig
@@ -57,7 +57,7 @@
                                         <span class="fade">No description.</span>
                                     {% endif %}
                                 </div>
-                                <div class="content-ratings">
+                                <div class="icons">
                                     {{ show_ratings(submission.interactions.ratings) }}
                                 </div>
                             </td>
