--- a/betty/skins/qobo/templates/watch.twig
+++ b/betty/skins/qobo/templates/watch.twig
@@ -7,7 +7,7 @@
     <script>
         var starRating = raterJs( {
             max:5,
-            starSize:20,
+            starSize:16,
             rating:{{ submission.interactions.ratings.average }},
             element:document.querySelector("#rater"),
             rateCallback:function rateCallback(rating, done) {
@@ -37,8 +37,11 @@
 
 
 {% block content %}
-    <div id="page-left" style="width: 680px;">
+    <div id="page-left" style="width: 600px;">
         <h1>{{ submission.title }}</h1>
+        {% if submission.is_owner %}
+            <a href="/edit?v={{ submission.id }}">Edit</a>
+        {% endif %}
         {{ submission_view(submission) }}
         <div>
             {% if submission.description | trim is not empty %}
@@ -48,8 +51,48 @@
             {% endif %}
             <small>Submitted on {{ submission.published | date('F j, Y') }} by {{ user_link(submission.author) }}</small>
         </div>
-        <div>
-            <div id="rater"></div>
+        <div class="content-box submission-stats-box">
+            <div id="submission-stats-actions">
+                <div class="submission-stats-row icons">
+                    <span class="silk-companion star_gold"></span><a><span class="elink">Favorite</span></a>
+                </div>
+                <div class="submission-stats-row icons">
+                    <span class="silk-companion star_gold"></span><a><span class="elink">Flag</span></a>
+                </div>
+            </div>
+            <div id="submission-stats-stats">
+                <div class="submission-stats-row">
+                    <div id="submission-stats-views">{{ submission.interactions.views }} views</div>
+                    <div id="rater"></div>
+                </div>
+                <div class="submission-stats-row">
+                    <div>
+                        <small>
+                            {{ submission.interactions.ratings.total }} ratings
+                        </small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div id="comments">
+            <h2>Recent Comments</h2>
+            {% for comment in submission.comments %}
+                <div class="comment" id="comment-{{ comment.id }}">
+                    <div class="comment-header">
+                        <strong>{{ user_link(comment.author) }}</strong> <small title="{{ comment.posted | date('F j, Y') }}">{{ comment.posted | relative_time }}</small>
+                    </div>
+                    <div class="comment-body">
+                        {% if comment.post | trim is not empty %}
+                            {{ comment.post | markdown_user_written }}
+                        {% else %}
+                            <small>Null comment</small>
+                        {% endif %}
+                    </div>
+                </div>
+            {% else %}
+                No comments!
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
