--- a/betty/skins/qobo/templates/index.twig
+++ b/betty/skins/qobo/templates/index.twig
@@ -50,7 +50,7 @@
     <div id="page-right" style="width: 260px;">
         <div class="content-header">What's new?</div>
         <div class="content-box">
-            Just another redesign of Qobo.
+            Just another redesign of squareBracket.
         </div>
     </div>
 {% endblock %}
