--- a/betty/skins/qobo/templates/_layout.twig
+++ b/betty/skins/qobo/templates/_layout.twig
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>{{ title }} - Qobo</title>
+    <title>{{ title }} - squareBracket</title>
     <link rel="stylesheet" href="theme/common.css">
     <link rel="stylesheet" href="theme/famfamfam-silk.min.css">
     <link rel="stylesheet" href="theme/silk-companion.min.css">
@@ -30,7 +30,7 @@
     </div>
     <div class="header">
         <div class="header-logo">
-            <a href="/index.php"><img alt="Qobo Beta" src="/img/qobo.gif"></a>
+            <a href="/index.php"><img alt="squareBracket" src="/img/qobo.gif"></a>
         </div>
         <div class="header-links">
             <a class="menulink" href="/browse.php">Browse</a> -
