fixes + update branding assets

--- a/betty/skins/qobo/templates/edit.twig
+++ b/betty/skins/qobo/templates/edit.twig
@@ -19,7 +19,7 @@
                               style="overflow:hidden;resize:vertical" rows="3">{{ data.description }}</textarea>
                 </div>
                 <div>
-                    <input type="submit" id="upload" name="upload"
+                    <input type="submit" id="upload" name="upload" class="form-button-submit"
                            value="Save changes">
                 </div>
         </form>
