--- a/betty/skins/qobo/templates/profile.twig
+++ b/betty/skins/qobo/templates/profile.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = user.username %}
+{% set title = data.username %}
 
 {% block content %}
     <div id="page-left" style="width: 180px;">
