--- a/betty/skins/qobo/templates/_layout.twig
+++ b/betty/skins/qobo/templates/_layout.twig
@@ -57,7 +57,7 @@
         {% endif %}
         {% block content %}{% endblock %}
         <div class="footer">
-            <p>© 2021-{{ 'now' | date('Y') }} BettySB contributors.</p>
+            <p>© 2021-{{ 'now' | date('Y') }} squareBracket contributors.</p>
         </div>
     </div>
 </div>
