--- a/orange/skins/qobo/templates/login.twig
+++ b/orange/skins/qobo/templates/login.twig
@@ -21,7 +21,10 @@
                     <div>
                         <input type="password" name="password" class="form-submit" placeholder="Password">
                     </div>
-                    <input type="submit" class="form-button-submit" value="Login" name="loginsubmit">
+
+                    <div class="form-button-container">
+                        <input type="submit" class="form-button-submit" value="Login" name="loginsubmit">
+                    </div>
                 </form>
             </div>
         </div>
