--- a/orange/skins/qobo/templates/index.twig
+++ b/orange/skins/qobo/templates/index.twig
@@ -3,54 +3,31 @@
 {% set title = "Index" %}
 
 {% block content %}
-    <div id="page-left" style="width: 680px;">
+    <div id="page-left" style="width: 473px;">
         <div class="content-header">
             <span>Randomized list of submissions</span>
             <div class="content-header-right">
-                <a href="browse.php">Browse more submissions</a>
+                <a href="browse.php">Browse</a>
             </div>
         </div>
         <div class="content-box">
             {% for submission in data.submissions %}
-                <div class="content-entry">
-                    <table cellpadding="0" cellspacing="0">
-                        <tr valign="top">
-                            <td>
-                                <a href="/watch.php?v={{ submission.id }}">
-                                    <img src="{{ thumbnail(submission.id, submission.type) }}" width="120"
-                                         alt="{{ submission.title }}" class="content-image">
-                                </a>
-                            </td>
-                            <td>
-                                <div class="content-title">
-                                    <a href="/watch.php?v={{ submission.id }}">
-                                        {{ submission.title }}
-                                    </a>
-                                </div>
-                                <div class="content-description">
-                                    By {{ user_link(submission.author) }}, {{ submission.published | relative_time }}
-                                    <br>
-                                    {% if submission.description|trim is not empty %}
-                                        <span>{{ submission.description }}</span>
-                                    {% else %}
-                                        <span class="fade">No description.</span>
-                                    {% endif %}
-                                </div>
-                                <div class="icons">
-                                    {{ show_ratings(submission.interactions.ratings) }}
-                                </div>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                {{ include('/components/_index_submission.twig') }}
             {% endfor %}
         </div>
     </div>
 
-    <div id="page-right" style="width: 260px;">
-        <div class="content-header">What's new?</div>
+    <div id="page-right" style="width: 473px;">
+        <div class="content-header">
+            <span>Recent submissions</span>
+            <div class="content-header-right">
+                <a href="browse.php">Browse</a>
+            </div>
+        </div>
         <div class="content-box">
-            Just another redesign of Qobo.
+            {% for submission in data.submissions_new %}
+                {{ include('/components/_index_submission.twig') }}
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
