--- a/biscuit/stylesheets/_content_box.scss
+++ b/biscuit/stylesheets/_content_box.scss
@@ -5,6 +5,16 @@ div.content-header
     color: #000;
     font-size: 14px;
     font-weight: bold;
+
+    &.profile-stats
+    {
+        text-align: center;
+        font-weight: normal;
+        font-size: 12px;
+        .stat {
+            margin: 0 4px;
+        }
+    }
 }
 
 div.content-header-right
@@ -21,6 +31,12 @@ div.content-box
     padding: 6px;
     margin-bottom: 7px;
     overflow: hidden;
+
+    .profile-title {
+        color: #864e14;
+        font-size: 16pt;
+        margin-bottom: 5px;
+    }
 }
 
 div.content-entry
