--- a/biscuit/stylesheets/_profile_page.scss
+++ b/biscuit/stylesheets/_profile_page.scss
@@ -1,12 +1,31 @@
+$pfp-width: 95px;
+
 div.profile-box {
   padding: 10px;
-  text-align: center;
-}
+  background-color: #ffaa1d;
 
-div.profile-box-username {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  background: #ffffff;
-  color: #000000;
+  .profile-box-pfp {
+    width: $pfp-width;
+    float: left;
+    padding-right: 10px;
+
+    .pfp {
+      width: $pfp-width;
+    }
+  }
+
+  .profile-box-username {
+    font-size: 15pt;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #000000;
+  }
+
+  .profile-box-links {
+    font-size: 12pt;
+
+    .link {
+      padding-right: 7px;
+    }
+  }
 }
