bring settings over to biscuit frontend

--- a/biscuit/stylesheets/_content_box.scss
+++ b/biscuit/stylesheets/_content_box.scss
@@ -32,7 +32,7 @@ div.content-box
     margin-bottom: 7px;
     overflow: hidden;
 
-    .profile-title {
+    .text-title {
         color: #864e14;
         font-size: 16pt;
         margin-bottom: 5px;
