--- a/orange/skins/qobo/templates/profile.twig
+++ b/orange/skins/qobo/templates/profile.twig
@@ -41,7 +41,7 @@
     </div>
     <div class="content-box">
         <div id="page-left" style="width: 460px;">
-            <div class="profile-title">Profile</div>
+            <div class="text-title">Profile</div>
             {% if data.about %}
                 {{ data.about }}
             {% else %}
