remove community page and add browse paeg
pretty redudant

--- a/orange/skins/qobo/templates/_layout.twig
+++ b/orange/skins/qobo/templates/_layout.twig
@@ -34,8 +34,7 @@
         </div>
         <div class="header-links">
             <a class="menulink" href="/browse.php">Browse</a> -
-            <a class="menulink" href="/users.php">Users</a> -
-            <a class="menulink" href="/community.php">Community</a>
+            <a class="menulink" href="/users.php">Users</a>
         </div>
     </div>
     <form action="login.php" method="post" name="logout">
